# flatfekt

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  bake_output.txt  flatfekt.toml  scratch.py  scratch10.py  scratch7.py  scratch9.py
.cargo/: config.toml
.config/flatfekt/: flatfekt.toml
apps/flatfekt/: Cargo.toml
apps/flatfekt-cli/: Cargo.toml
apps/flatfekt-cli/src/: main.rs
apps/flatfekt-viewer/: Cargo.toml
apps/flatfekt-viewer/src/: main.rs
apps/flatfekt/src/: main.rs  ui.rs
apps/flatfekt/tests/: export_frames_smoke.rs
assets/effects/: bw_overlay.wgsl  grayscale.wgsl  sepia.wgsl
assets/flatfekt/shaders/: grayscale.frag  invert.wgsl  postprocess.wgsl
crates/flatfekt-assets/: Cargo.toml
crates/flatfekt-assets/src/: lib.rs  pack.rs  resolve.rs
crates/flatfekt-config/: Cargo.toml
crates/flatfekt-config/src/: lib.rs
crates/flatfekt-config/tests/: fixtures.rs
crates/flatfekt-runtime/: Cargo.toml  test_output.txt
crates/flatfekt-runtime/src/: aggregate.rs  animation.rs  bake.rs  export.rs  headless_timeline.rs  lib.rs  rapier_backend.rs  render_effects.rs  simulation.rs
crates/flatfekt-runtime/tests/: bake_artifact.rs  baked_scrub_paused.rs  rapier_repeatability.rs  render_order.rs  sim_determinism.rs  sim_primitives_determinism.rs  sim_repeatability.rs  smoke.rs  text_instantiation.rs  timeline_determinism.rs
crates/flatfekt-schema/: Cargo.toml
crates/flatfekt-schema/benches/: scene_load.rs
crates/flatfekt-schema/examples/: dump_schema.rs
crates/flatfekt-schema/src/: lib.rs
crates/flatfekt-schema/tests/: fixtures.rs
crates/flatfekt-workspace-checks/: Cargo.toml
crates/flatfekt-workspace-checks/tests/: dependency_dag.rs
docs/: architecture.md  dependencies.md  platform.md
docs/roadmaps/: README.md  agents-roadmap.md  animation-roadmap.md  assets-roadmap.md  config-control-pane.md  core-roadmap.md  export-roadmap.md  implementation.md  interaction-roadmap.md  rendering-roadmap.md  runtime-roadmap.md  schema-roadmap.md  scripting-roadmap.md  simulation-roadmap.md  testing-roadmap.md  text-roadmap.md  tooling-roadmap.md  ui-roadmap.md
docs/tranches/: 2026-04-16-tranche-001-tranche-process.md  2026-04-16-tranche-002-roadmap-reframe.md  2026-04-16-tranche-003-create-15-roadmaps.md  2026-04-16-tranche-004-remove-tmp-references.md  2026-04-16-tranche-005-code-layout.md  2026-04-16-tranche-006-readme.md  2026-04-16-tranche-007-wayland-default-doc.md  2026-04-16-tranche-008-require-vulkan.md  2026-04-16-tranche-009-add-egui-ui-item.md  2026-04-16-tranche-010-basic-scaffolding.md  2026-04-16-tranche-011-asset-format-roadmap-items.md  2026-04-16-tranche-012-scene-playback-and-introspection-roadmap.md  2026-04-16-tranche-013-mode-cache-config-dirs-roadmap.md  2026-04-16-tranche-014-core-10-items.md  2026-04-16-tranche-015-document-toolchain-and-rustfmt.md  2026-04-16-tranche-016-core-10-items.md  2026-04-16-tranche-017-scene-instantiate-assets.md  2026-04-16-tranche-018-runtime-rendering-polish.md  2026-04-16-tranche-019-rendering-schema-fixtures.md  2026-04-16-tranche-020-assets-ids-caching-ordering.md  2026-04-16-tranche-021-timeline-ui-egui-inspector.md  2026-04-16-tranche-022-agents-rules.md  2026-04-16-tranche-022-ui-overlays.md  2026-04-16-tranche-023-animation-tweens.md  2026-04-17-tranche-023-agents-no-commit-messages.md  2026-04-17-tranche-024-runtime-hot-reload-and-animation-events.md  2026-04-17-tranche-024-schema-ui.md  2026-04-17-tranche-025-animation-seek-relative-and-rendering-effects.md  2026-04-17-tranche-025-runtime-hotreload.md  2026-04-17-tranche-026-rendering-effects-rtt-wgsl.md  2026-04-17-tranche-026-testing-tooling.md  2026-04-17-tranche-027-text-assets.md  2026-04-17-tranche-027-tooling-assets-simulation-text-testing.md  2026-04-17-tranche-028-simulation.md  2026-04-17-tranche-028-x11-flag.md  2026-04-17-tranche-029-interaction.md  2026-04-17-tranche-030-agents-scripting.md  2026-04-17-tranche-031-export.md  2026-04-18-tranche-029-viewer-x11-flag.md  2026-04-18-tranche-030-backend-env-preflight.md  (+25 more)
scenes/: asset_test.toml  demo.toml  physics_duration_stitched.toml  physics_duration_test.toml  physics_duration_test_blue.toml  physics_test.toml  shader_overlay_bw.toml  shader_test.toml  shader_test_glsl.toml  sim_test.toml
scripts/: scratch.py  scratch11.py  scratch12.py  scratch2.py  scratch4.py  scratch5.py  scratch6.py  scratch8.py
tests/fixtures/configs/: invalid_asset_path.toml  valid.toml
tests/fixtures/patches/: add_entity.toml  invalid_op.toml  remove_entity.toml  update_transform.toml
tests/fixtures/scenes/: demo.toml  shapes.toml  timeline_test.toml  unknown_field.toml
