[workspace]
resolver = "3"
members = ["apps/*", "crates/*"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.102"
bevy = "0.18.1"
bevy_camera = "0.18.1"
bevy_mesh = "0.18.1"
bevy_shader = "0.18.1"
bevy_sprite_render = "0.18.1"
bevy_egui = "0.39.1"
bevy-inspector-egui = "0.36.0"
clap = { version = "4.6.1", features = ["derive"] }
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
wgpu = "29.0.1"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
