[package]
name = "flatfekt-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "flatfekt"
path = "src/main.rs"

[dependencies]
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
flatfekt-config = { path = "../../crates/flatfekt-config" }
flatfekt-schema = { path = "../../crates/flatfekt-schema" }
