[package]
name = "flatfekt-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "flatfekt"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
flatfekt-config = { path = "../../crates/flatfekt-config" }
flatfekt-schema = { path = "../../crates/flatfekt-schema" }
flatfekt-runtime = { path = "../../crates/flatfekt-runtime" }
