[package]
name = "flatfekt-viewer"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true

flatfekt-config = { path = "../../crates/flatfekt-config" }
flatfekt-runtime = { path = "../../crates/flatfekt-runtime" }
flatfekt-schema = { path = "../../crates/flatfekt-schema" }
