[package]
name = "flatfekt-viewer"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
bevy.workspace = true
bevy-inspector-egui.workspace = true
bevy_egui.workspace = true
pollster.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
wgpu.workspace = true

flatfekt-config = { path = "../../crates/flatfekt-config" }
flatfekt-runtime = { path = "../../crates/flatfekt-runtime" }
flatfekt-schema = { path = "../../crates/flatfekt-schema" }
