[package]
name = "flatfekt"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
wgpu.workspace = true
pollster.workspace = true

flatfekt-config = { path = "../../crates/flatfekt-config" }
flatfekt-runtime = { path = "../../crates/flatfekt-runtime" }
flatfekt-schema = { path = "../../crates/flatfekt-schema" }
