[package]
name = "flatfekt-assets"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
naga = { version = "29.0.1", features = ["wgsl-in"] }

flatfekt-config = { path = "../flatfekt-config" }
flatfekt-schema = { path = "../flatfekt-schema" }

[features]
bevy = ["dep:bevy"]

[dependencies.bevy]
workspace = true
optional = true
