[package]
name = "flatfekt-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
bevy.workspace = true
bevy_camera.workspace = true
bevy_mesh.workspace = true

flatfekt-config = { path = "../flatfekt-config" }
flatfekt-schema = { path = "../flatfekt-schema" }
flatfekt-assets = { path = "../flatfekt-assets", features = ["bevy"] }
toml.workspace = true
notify = "8.2.0"
crossbeam-channel = "0.5.15"
